# clean_test

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yaml
data/redis/: dump.rdb
migrations/2024-02-24-044023_init/: up.sql
migrations/2024-02-26-001934_invitations/: down.sql  up.sql
migrations/2024-02-29-062845_users/: down.sql  up.sql
src/: constants.rs  error.rs  lib.rs  main.rs
src/adapters/api/: mod.rs
src/adapters/api/dog_facts/: dog_facts_mappers.rs  mod.rs
src/adapters/api/healthcheck/: healthcheck_controllers.rs  mod.rs
src/adapters/api/invitation/: invitation_controller.rs  invitation_payloads.rs  mod.rs
src/adapters/api/login/: login_controller.rs  login_payloads.rs  mod.rs
src/adapters/api/register_complete/: mod.rs  register_complete_conrtroller.rs  register_complete_payloads.rs
src/adapters/api/shared/: app_state.rs  mod.rs  routes.rs  session.rs
src/adapters/spi/: mod.rs
src/application/: mod.rs
src/application/mappers/: mod.rs
src/application/repositories/: dog_facts_repository_abstract.rs  email_repository_abstract.rs  invitation_repository_abstract.rs  login_repository_abstract.rs  mod.rs  register_complete_repository_abstract.rs
src/application/usecases/: get_all_dog_facts_usecase.rs  get_one_dog_fact_by_id_usecase.rs  interfaces.rs  invitation_usecase.rs  login_usecase.rs  mod.rs  register_complete_usecase.rs
src/application/utils/: error_handling_utils.rs
src/common/: error.rs
src/domain/: error.rs  invitation_entity.rs  mod.rs  user_entity.rs
src/infrastructure/: mod.rs  server.rs
(+15 files in other folders)
