[package]
name = "clean_arch_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "clean_arch_test"
path = "src/main.rs"

[lib]
name = "test_api"
path = "src/lib.rs"

[dependencies]
env_logger = "0.11.3"
actix-http = "3.6.0"
diesel = { version = "~1.4", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuidv07",
    "serde_json",
] }
actix-redis = "0.13.0"
actix-rt = "2.9.0"
actix-session = { version = "0.9.0", features = ["redis-rs-tls-session"] }
actix-web = { version = "4.5.1", features = ["openssl"] }
async-trait = "0.1.77"
failure = "0.1.8"
log = "0.4.21"
serde = "1.0.197"
serde_json = "1.0.114"
diesel_migrations = "2.1.0"
r2d2 = "0.8.10"
tokio = { version = "1.36.0", features = ["full"] }
thiserror = "1.0.57"
derive_more = "0.99.17"
reqwest = { version = "0.11.24", features = ["json"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
lettre = "0.11.4"
argon2 = "0.5.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
anyhow = "1.0.80"

[dev-dependencies]
cargo-tarpaulin = "~0.20"
uuid = { version = "~1.0", features = ["serde", "v4"] }
mockall = "~0.11"
